package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public abstract class AbstractMovieFactory {
    abstract Comedy createComedy();
    abstract ActionMovie createActionMovie();
}
