package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public interface ActionMovie extends Movie {
}
