package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public class BollywoodActionMovie implements ActionMovie{
    @Override
    public void play() {
        System.out.println("Playing Bollywood Action Movie ...");
    }
}
