package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public class BollywoodComedy implements Comedy {
    @Override
    public void play() {
        System.out.println("Playing Bollywood Comedy ...");
    }
}
