package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public interface Comedy extends Movie {
}
