package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public class HollywoodActionMovie implements ActionMovie{
    @Override
    public void play() {
        System.out.println("Playing Hollywood Action Movie ...");
    }
}
