package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public class HollywoodComedy implements Comedy {
    @Override
    public void play() {
        System.out.println("Playing Hollywood Comedy ...");
    }
}
