package com.jovisco.tutorial.patterns.abstractfactory.assignment;

public interface Movie {
    void play();
}
